--- a/mern-client/package.json
+++ b/mern-client/package.json
@@ -11,6 +11,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "firebase": "^11.8.1",
     "flowbite-react": "^0.11.7",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.1",
